fix: Fixing layout breakage

--- a/src/components/card-change-account/styles.css
+++ b/src/components/card-change-account/styles.css
@@ -1,26 +1,26 @@
-#main-cardChangeAccount{
-    width: 550px;
-    height: 580px;
-    left: 110vh;
-    top: 5vh;
-    border: none;
-    border-radius: 20px;
-    background-color: #6a5ab1;
-    opacity: 0.9;
-    box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.6);
-
-}
-
 .main-cardChangeAccount {
     width: 550px;
     height: 580px;
     position: relative;
     left: 110vh;
-    top: 13vh;
+    top: 120px;
     display: flex;
     justify-content: center;
     align-items: center;
     
-
 }
+
+#main-cardChangeAccount{
+    width: 550px;
+    height: 580px;
+    left: 110vh;
+    top: 6vh;
+    border: none;
+    border-radius: 20px;
+    background-color: #6a5ab1;
+    opacity: 0.9;
+    box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.6);
+    margin-bottom: 90px;
+}
+
 
