--- a/src/components/cardOne/styles.css
+++ b/src/components/cardOne/styles.css
@@ -1,23 +1,27 @@
-#modif{
-    width: 80vh;
-    height: 83  vh;
+.main-cardOne {
+    width: 550px;
+    height: 580px;
     position: relative;
+    left: 116vh;
+    top: 13vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#modif{
+    width: 550px;
+    height: 580px;
     left: 110vh;
-    top: 15vh;
+    top: 5vh;
     border: none;
     border-radius: 20px;
     background-color: #6a5ab1;
     opacity: 0.9;
     box-shadow: 0px 0px 50px 1px rgba(0, 0, 0, 0.6);
-    display: flex;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    margin-bottom: 25px;
 }
 
-.main-cardOne {
-    position: relative;
-    top: 57px;
-}
 
 
 
