--- a/src/components/form-change-account/styles.css
+++ b/src/components/form-change-account/styles.css
@@ -13,7 +13,13 @@
     position: relative;
     margin-top: 15px;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.5);
+    
 
+}
+
+.container-main-changepassword {
+    position: relative;
+    bottom: 20px;
 }
 
 .conteudo-form-card-change-account {
@@ -61,21 +67,23 @@
 
 .href-chage-password {
     position: relative;
+    align-items: center;
+    justify-content: center;
+    display: flex;
     top: 100px;
 }
 
-.hr-form-signin {
+.hr-form-change-account {
     position: relative;
     top: 25px;
     width: 91%;
-    left: 24px;
+    left: 23px;
 }
 
 .main-card-change-account {
    text-align: center;
    position: relative;
    top: 100px;
-   
 }
 
 .p-form-change-account {
