--- a/src/components/form/styles.css
+++ b/src/components/form/styles.css
@@ -11,19 +11,15 @@
     border-radius: 6px;
     transition: .5s;
     position: relative;
-    left: 47px;
-    margin-top: 15px;
+    margin-top: 12px;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.5);
 
 }
 .conteudo-form-cardOne {
-    width: 100%;
-    height: 100%;
-    display: block;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     position: relative;
-}
+    top: 65px;
+ }
 
 #btn-cardone {
     width: 400px;
@@ -35,11 +31,11 @@
     border: none; 
     box-shadow: 0px 0px 20px 1px rgba(43, 41, 41, 0.5);
     position: relative;
-    left: 75px;
     transition: 0.5s;
     margin-top: 35px;
     font-size: 16px;
     height: 48px;
+    left: 67px;
 }
 
 #btn-create-account {
@@ -52,7 +48,6 @@
     border: none; 
     box-shadow: 0px 0px 20px 1px rgba(43, 41, 41, 0.5);
     position: relative;
-    left: 75px;
     transition: 0.5s;
     margin-top: 100px;
     font-size: 16px;
@@ -66,24 +61,17 @@
     text-transform: uppercase;
 }
 
-.href-chage-password {
+.href-form-cardone {
     position: relative;
-    right: 185px;
     top: 100px;
+    right: 200px;
+    justify-content: center;
+    text-align: center;
 }
 
 .hr-form-signin {
     position: relative;
     top: 25px;
     width: 91%;
-    left: 24px;
-}
-
-
-.centralizar-tudo {
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    justify-items: center;
-    display: grid;
+    left: 23px;
 }
